--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-compass": "^2.1.0",
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.2.1",
     "gulp-uglify": "^3.0.0"
   }
 }
