--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ node_modules
 .DS_Store
 
 bower_components
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
